--- a/src/components/Homepage/Homepage.module.css
+++ b/src/components/Homepage/Homepage.module.css
@@ -1,6 +1,8 @@
 .container {
     background-color: rgb(62, 139, 210);
-    height: 40vh;
+    height: 50vh;
+    padding-top: 50px;
+
 }
 
 .bodyy {
