--- a/src/components/ScanQR/ScanQR.module.css
+++ b/src/components/ScanQR/ScanQR.module.css
@@ -51,12 +51,13 @@
 }
 
 .shade2 {
+    padding: 10px;
     background: white;
-    padding: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 4px;
+    position: relative;
 }
 
 .data {
