--- a/src/components/Homepage/Homepage.module.css
+++ b/src/components/Homepage/Homepage.module.css
@@ -11,6 +11,7 @@
     justify-content: center;
     position: absolute;
     height: 80vh;
+    width: 100%;
 }
 
 .qr {
@@ -60,4 +61,8 @@
 
 .data {
     width: 100%;
+}
+
+.pengunjung {
+    margin: auto;
 }
